// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`helpMessage should generate help message with default format 1`] = `
"Usage: cli

Options:
  --port, -p <number>      (required) "
`;

exports[`helpMessage should generate help message with custom program name using programName() 1`] = `
"Usage: myapp

Options:
  --port, -p <number>      (required) "
`;

exports[`helpMessage should generate help message with description using describe() 1`] = `
"Usage: myapp

A simple CLI tool

Options:
  --verbose, -v            "
`;

exports[`helpMessage should generate help message with flag descriptions using describe() 1`] = `
"Usage: cli

Options:
  --port, -p <number>      (required) Port number to listen on
  --verbose, -v            Enable verbose output"
`;

exports[`helpMessage should support describe() before required() 1`] = `
"Usage: cli

Options:
  --port, -p <number>      (required) Port number"
`;

exports[`helpMessage should generate help message for multiple flags 1`] = `
"Usage: cli

Options:
  --port, -p <number>      (required) 
  --name, -n <string>      
  --verbose, -v            "
`;

exports[`helpMessage should generate complete help message with all features 1`] = `
"Usage: myapp

A simple CLI application

Options:
  --port, -p <number>      (required) Port number to listen on
  --name, -n <string>      Application name
  --verbose, -v            Enable verbose output
  --label, -l <strings>    Add labels"
`;

exports[`helpMessage should support fluent API with programName, describe and parse 1`] = `
"Usage: myapp

A simple CLI tool

Options:
  --port, -p <number>      (required) Port number"
`;

exports[`docker CLI should generate docker help message 1`] = `
"Usage: docker

A self-sufficient runtime for containers

Options:
  --config <string>        Location of client config files (default "/Users/jonathan.delgado/.docker")
  -c, --context <string>   Name of the context to use to connect to the daemon
  -D, --debug              Enable debug mode
  -H, --host <string>      Daemon socket to connect to
  -l, --log-level <string>  Set the logging level ("debug", "info", "warn", "error", "fatal")
  --tls                    Use TLS; implied by --tlsverify
  -v, --version            Print version information and quit

Commands:
  run                      Create and run a new container from an image
  exec                     Execute a command in a running container
  ps                       List containers
  build                    Build an image from a Dockerfile
  pull                     Download an image from a registry
  images                   List images
  login                    Authenticate to a registry
  container                Manage containers
  image                    Manage images
  network                  Manage networks
  volume                   Manage volumes"
`;
